# Wallet_tg_bot

./: .flake8  .gitignore  README.md  alembic.ini  config.py  database.py  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt
DAL/: account_repository.py  category_repository.py  transaction_repository.py  wallet_repository.py
alembic/: env.py
db/: models.py
filters/: chat_type.py
handlers/: common.py  menu.py  statistic.py  wallet_operations.py
keyboards/: transaction_record.py
services/: account_service.py  category_service.py  registration.py  statistic.py  transaction_service.py  wallet_management.py  wallet_service.py
states/: transaction_record.py
utils/: add categories.py  add_categories.py
